# vlp

./: .env.md  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
libs/: common_core-1.0.0-py3-none-any.whl  common_rabbit-1.0.0-py3-none-any.whl  gateway_service-0.1.0-py3-none-any.whl
vlp_service/: main.py  settings.py
vlp_service/schemas/: __init__.py  base.py
vlp_service/services/: __init__.py  calculate.py  vlp.py
